--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,35 @@
 /* CSS Document */
-*, *::after, *::before {
-  box-sizing:border-box;  
+html {
+  font-family: Roboto, sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+header nav {
+  position: absolute;
+  background: yellow;
+  height: 100vh;
+  width: 100%;
+}
+
+header nav.active {
+   transform: translateX(-100vw);
+
+}
+
+#logo {
+  width: 4em;
+  height: 4em;
+}
+
+#slider {
+  max-width: 100%;
+}
